# oaip_sem_2_lab_4

lab_4/: CMakeLists.txt  functions.cpp  header.h  main.cpp
